# Multi-Agent-Research-Platform

./: README.md
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  critic.py  graph.py  planner.py  reader.py  searcher.py  state.py  writer.py
backend/app/api/v1/: __init__.py  health.py  papers.py  research.py
backend/app/core/: config.py  deps.py  exceptions.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  agent_event.py  job_paper.py  paper.py  report.py  research_job.py
backend/app/schemas/: __init__.py  research.py
backend/app/services/: arxiv_client.py  llm.py  paper_dto.py  research_service.py  semantic_scholar.py
backend/app/workers/: research_worker.py
backend/tests/: conftest.py  test_critic.py  test_health.py  test_paper_dto.py  test_retry.py  test_schemas.py  test_writer_helpers.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/research/: page.tsx
frontend/src/app/research/[id]/: page.tsx
frontend/src/components/: AgentTimeline.tsx  Hero.tsx  JobDetailClient.tsx  JobList.tsx  ReportView.tsx  ResearchForm.tsx  SiteHeader.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  types.ts
