[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-research-platform"
version = "0.1.0"
description = "Production multi-agent academic research backend"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Mayur Gohane" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "redis>=5.2.0",
  "arq>=0.26.1",
  "httpx>=0.28.0",
  "tenacity>=9.0.0",
  "openai>=1.55.0",
  "langgraph>=0.2.50",
  "langchain-core>=0.3.20",
  "langchain-openai>=0.2.10",
  "python-multipart>=0.0.17",
  "orjson>=3.10.0",
  "structlog>=24.4.0",
  "arxiv>=2.1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.28.0",
  "ruff>=0.8.0",
  "aiosqlite>=0.20.0",
]

[project.scripts]
marp-api = "app.main:run"
marp-worker = "app.workers.research_worker:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E501"]
